--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="main"></div>
-    <script src="bundle.js"></script>
+    <script src="@@URL@@/static/js/bundle.js"></script>
   </body>
 </html>
