feat: create server for serving static files

--- a/server/index.html
+++ b/server/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="main"></div>
-    <script src="@@URL@@/static/js/bundle.js"></script>
+    <script src="@@CDN@@/js/bundle.js"></script>
   </body>
 </html>
