--- a/server/index.html
+++ b/server/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport"
     content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>6Ghadam</title>
+    <title>۶قدم</title>
   </head>
   <body>
     <div id="main"></div>
