feat: add favicon

--- a/server/index.html
+++ b/server/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport"
-    content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link
+      rel="icon" type="image/svg"
+      href="@@CDN@@/images/logo.svg">
     <title>۶قدم</title>
   </head>
   <body>
