--- a/server/index.html
+++ b/server/index.html
@@ -6,11 +6,11 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link
       rel="icon" type="image/svg"
-      href="@@CDN@@/images/logo.svg">
+      href="./logo.svg">
     <title>۶قدم</title>
   </head>
   <body>
     <div id="main"></div>
-    <script src="@@CDN@@/js/bundle.js"></script>
+    <script src="./bundle.js"></script>
   </body>
 </html>
